--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
   margin: 0;
 }
 
-/* Custom properties/variables */
+/* Custom properties/variables  */
 :root {
   --main-white: #f0f0f0;
   --main-red: #0e68ad;
@@ -22,28 +22,56 @@ html {
 * {
   margin: 0;
   padding: 0;
+}
+
+/* box-sizing and font sizing */
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
 html {
   box-sizing: border-box;
+
+  /* Set font size for easy rem calculations
+   * default document font size = 16px, 1rem = 16px, 100% = 16px
+   * (100% / 16px) * 10 = 62.5%, 1rem = 10px, 62.5% = 10px
+  */
   font-size: 62.5%;
   scroll-behavior: smooth;
 }
 
-/* Media queries for responsiveness */
+/* A few media query to set some font sizes at different screen sizes.
+ * This helps automate a bit of responsiveness.
+ * The trick is to use the rem unit for size values, margin and padding.
+ * Because rem is relative to the document font size
+ * when we scale up or down the font size on the document
+ * it will affect all properties using rem units for the values.
+*/
+
+/* I am using the em unit for breakpoints
+ * The calculation is the following
+ * screen size divided by browser base font size
+ * As an example: a breakpoint at 980px
+ * 980px / 16px = 61.25em
+*/
+
+/* 1200px / 16px = 75em */
 @media (max-width: 75em) {
   html {
     font-size: 60%;
   }
 }
 
+/* 980px / 16px = 61.25em */
 @media (max-width: 61.25em) {
   html {
     font-size: 58%;
   }
 }
 
+/* 460px / 16px = 28.75em */
 @media (max-width: 28.75em) {
   html {
     font-size: 55%;
@@ -51,6 +79,7 @@ html {
 }
 
 /* Base styles */
+
 body {
   font-family: 'Roboto Mono', monospace;
   font-size: 1.8rem; /* 18px */
@@ -126,7 +155,28 @@ img {
   background: var(--main-blue);
 }
 
+/* Welcome section */
+.welcome-section {
+    display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: #000;
+  background-image: linear-gradient(62deg,#754632 0%, #422214 100%);
+}
+
+.welcome-section > p {
+
+  font-size: 3rem;
+  font-weight: 200;
+  font-style: italic;
+  color: var(--main-blue);
+}
+
 /* Projects section */
+
 .projects-section {
   text-align: center;
   padding: 10rem 2rem;
@@ -145,6 +195,7 @@ img {
   }
 }
 
+/* "Automagic" image grid using no media queries */
 .projects-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -218,6 +269,7 @@ img {
 }
 
 /* Contact section */
+
 .contact-section {
   display: flex;
   flex-direction: column;
@@ -263,37 +315,48 @@ img {
   transform: translateY(8px);
 }
 
-/* HomeSlide styles */
-.homeSlide {
-  height: 100vh;
+}
+
+@media (max-width: 28.75em) {
+  footer {
+    flex-direction: column;
+    text-align: center;
+  }
+}
+
+.homeSlide{
+  height:100vh;
 }
 
 .bcg {
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  height: 100%;
-  width: 100%;
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+	height: 100%;
+	width: 100%;
 }
 
+
+
+
 .hsContainer {
-  display: table;
-  table-layout: fixed;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  position: relative;
+	display: table;
+	table-layout: fixed;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	position: relative;
 }
 
 .hsContent {
-  max-width: 450px;
-  margin: -150px auto 0 auto;
-  display: table-cell;
-  vertical-align: middle;
-  color: #ebebeb;
-  padding: 0 8%;
-  text-align: center;
+	max-width: 450px;
+	margin: -150px auto 0 auto;
+	display: table-cell;
+	vertical-align: middle;
+	color: #ebebeb;
+	padding: 0 8%;
+	text-align: center
 }
 
 .hsContent h2,
@@ -308,4 +371,72 @@ img {
   width: 400px;
   margin: 0 auto;
   color: #b2b2b2;
+}
+
+.menu {
+    position: fixed;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    right:1em;
+    top:50%;
+    z-index:9999;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%); 
+}
+
+#menu-center ul {
+  padding:0;
+  
+  li {
+    list-style: none;
+    margin: 10px 0;
+    
+    a {
+      text-indent:-9999px;
+      display:block;
+      border-radius:50%;
+      line-height:8px;
+      width:8px;
+      background:#fff;
+      &.active{
+          background:none;
+          border:2px solid #fff;
+          margin-left:-2px;
+        }
+        &:hover{
+
+        }
+      }
+  }
+}
+/* Full-screen overlay */
+.welcome-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8); /* Adjust the transparency as needed */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+/* Content within the overlay */
+.welcome-content {
+  text-align: center;
+}
+
+.welcome-content img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+/* Hide the overlay after the animation is complete */
+.welcome-overlay.hidden {
+  display: none;
 }
