--- a/style.css
+++ b/style.css
@@ -426,15 +426,12 @@ img {
   z-index: 9999;
 }
 
-/* Content within the overlay */
-.welcome-content {
-  text-align: center;
-}
+/* Your existing CSS rules here */
 
-.welcome-content img {
-  max-width: 100%;
-  max-height: 100%;
-}
+/* Place the provided code here */
+/* Your existing code... */
+
+/* Paste the provided CSS code below */
 .bcg {
 	background-position: center center;
 	background-repeat: no-repeat;
@@ -444,8 +441,14 @@ img {
 	width: 100%;
 }
 
-
-/* Hide the overlay after the animation is complete */
-.welcome-overlay.hidden {
-  display: none;
+.hsContainer {
+	display: table;
+	table-layout: fixed;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	position: relative;
 }
+
+/* Rest of your existing CSS rules below */
+/* ... */
